docs: backend - adicionando documentação de pacientes via swagger
